feat: user workspace list view (#29)
